--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,14 @@
         "images": {
             "theme_frame": "images/theme_frame.png",
             "theme_tab_background": "images/theme_tab_background.png",
-            "theme_ntp_background": "images/theme_ntp_background.png"
+            "theme_ntp_background": "images/MagineChrome.png"
         },
         "colors": {
             "frame": [
-                0,
-                0,
-                0,
-                0
+                255,
+                255,
+                255,
+                0.2
             ],
             "frame_inactive": [
                 60,
@@ -24,7 +24,7 @@
             ],
             "frame_incognito": [
                 102,
-                102,
+                0,
                 102
             ],
             "frame_incognito_inactive": [
@@ -33,58 +33,58 @@
                 204
             ],
             "toolbar": [
-                223,
-                223,
-                223,
-                0.7
+               255,
+               255,
+               255,
+               0
             ],
             "tab_text": [
+               165,
+                41,
+                25
+            ],
+            "tab_background_text": [
+                165,
+                41,
+                25
+            ],
+            "bookmark_text": [
                 0,
                 0,
                 0
             ],
-            "tab_background_text": [
+            "ntp_link": [
                 255,
                 255,
                 255
             ],
-            "bookmark_text": [
-                51,
-                51,
-                51
-            ],
-            "ntp_link": [
-                121,
-                183,
-                2
-            ],
             "ntp_section_link": [
-                121,
-                182,
-                2
+               255,
+                255,
+                255
             ],
             "ntp_background": [
                 0,
                 0,
                 0,
-                0
+                1
             ],
             "ntp_text": [
-                255,
-                255,
-                255
+                165,
+                41,
+                25
             ],
             "button_background": [
-                122,
-                193,
-                13,
-                0.32
+                100,
+                100,
+                100,
+                0.3
             ]
         },
         "properties": {
-            "ntp_background_alignment": "center",
+            "ntp_background_alignment": "left",
             "ntp_background_repeat": "no-repeat",
-            "ntp_logo_alternate": 1
+            "ntp_logo_alternate": 0
         },
         "tints": {
             "buttons": [
